--- a/_sass/0-settings/_variables.scss
+++ b/_sass/0-settings/_variables.scss
@@ -17,6 +17,7 @@ $dark: #12111b;
 $blue-dark: #16151f;
 $gray: #6b6a79;
 $gray-light: #f8f8f8;
+$gray-light-dark: #e2e2e2;
 $gray-lighter: #eee;
 $gray-lightest: #f1f1f1;
 $white: #fff;
@@ -31,16 +32,22 @@ $background-color: $white;
 // *****************
 // Typography
 // *****************
-$base-font-size: 22px;
+$base-font-size: 16px;
 $base-font-style: normal;
 $base-font-variant: normal;
 $base-font-weight: 500;
-$base-font-family: 'Darker Grotesque', sans-serif;
-$base-line-height: 1.4;
+$base-font-family: 'Montserrat', serif;
+$base-line-height: 28px;
+
+
+$base-webkit-font-smoothing: antialiased;
+$base-moz-osx-font-smoothing: grayscale;
+  
+
 
 // Headings
 $heading-font-weight: 700;
-$heading-font-family: 'Darker Grotesque', sans-serif; 
+$heading-font-family: 'Montserrat', serif; 
 $heading-color: $text-color;
 
 $font-size-h1:  36px;
