--- a/_sass/2-base/_base.scss
+++ b/_sass/2-base/_base.scss
@@ -90,8 +90,8 @@ blockquote {
   padding: 20px 20px 20px 50px;
   margin-bottom: 0;
   font-family: $heading-font-family;
-  font-size: 31px;
-  line-height: 38px;
+  font-size: 26px;
+  line-height: 36px;
   font-weight: 800;
   color: $heading-color;
 
@@ -194,12 +194,12 @@ table {
 
 table th {
   padding: 10px;
-  font-size: 18px;
+  font-size: 14px;
   text-align: left;
-  border: 1px solid $dark;
-  color: $white;
+  border: 1px solid $gray-light-dark;
+  color: $dark;
   font-weight: 700;
-  background-color: $dark;
+  background-color: $white;
 }
 
 table tr {
@@ -212,9 +212,9 @@ table tr {
 
 table td {
   padding: 10px;
-  font-size: 16px;
+  font-size: 12px;
   font-weight: 600;
-  border: 1px solid $dark;
+  border: 1px solid  $gray-light-dark;
 }
 
 table tr:hover {
