--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,8 +9,16 @@
   <meta name="image" content="https://lucasgatsas.com/images/lucas_gatsas_.jpg">
   <meta itemprop="name" content="Lucas Gatsas - Astro + Solar Photographer">
 
+  <PageMap>
+      <DataObject type="thumbnail">
+      <Attribute name="src">http://YOURSITEHERE.COM/thumb.jpg</Attribute>
+      <Attribute name="width">204</Attribute>
+      <Attribute name="height">192</Attribute>
+      </DataObject>
+  </PageMap>
 
-  
+
+
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name='description' content='{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}'>
   <meta name='keywords' content='Lucas Gatsas, Gatsas, Astro + Solar Photographer'>
