--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
 
   <PageMap>
       <DataObject type="thumbnail">
-      <Attribute name="src">http://YOURSITEHERE.COM/thumb.jpg</Attribute>
+      <Attribute name="src">https://lucasgatsas.com/images/Lucas_Gatsas_01.jpg</Attribute>
       <Attribute name="width">204</Attribute>
       <Attribute name="height">192</Attribute>
       </DataObject>
