--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,18 +8,9 @@
 
   <meta name="image" content="https://lucasgatsas.com/images/lucas_gatsas_.jpg">
   <meta itemprop="name" content="Lucas Gatsas - Astro + Solar Photographer">
-
-  <PageMap>
-      <DataObject type="thumbnail">
-        <Attribute name="src" value="https://lucasgatsas.com/images/Lucas_Gatsas_01.jpg"/>
-      <Attribute name="width">204</Attribute>
-      <Attribute name="height">192</Attribute>
-      </DataObject>
-  </PageMap>
+  <meta name="thumbnail" content="https://lucasgatsas.com/images/Lucas_Gatsas_01.jpg" />
 
 
-
-  
 
 
 
