--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,29 @@
 ---
 layout: default
 ---
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Lucas Gatsas",
+    "url": "https://lucasgatsas.com",
+    "image": "{{ site.url }}{{ page.image | default: site.img_url }}",
+    "keywords": "Lucas Gatsas, Gatsas, Astro + Solar Photographer, tse262728.com, tse262728",
+    "sameAs": [
+      "https://www.instagram.com/lucasgatsas/",
+      "https://youtube.com/@lucasgatsasastro",
+      "https://x.com/lucasgatsas",
+      "https://www.threads.net/@lucasgatsas",
+      "https://vsco.co/lucasgatsas/gallery"
+    ],
+    "jobTitle": "Astro und Solar Photographer",
+    "worksFor": {
+      "@type": "Organization",
+      "name": "Swiss Solar Observatory Society",
+      "url": "https://lucasgatsas.com"
+    }
+  }
+</script>
 {% if page.image %}
 <div class="container">
   <div class="row">
