--- a/_includes/single-post-sitemap.html
+++ b/_includes/single-post-sitemap.html
@@ -3,7 +3,7 @@
   <lastmod>{{ post.date | date_to_xmlschema }}</lastmod>
   {% if page.priority %}<priority>{{page.priority}}</priority>{%endif%}
   <image:image>
-    <image:loc>{{ post.image | absolute_url }}</image:loc> <!-- Test Gain-->
+    <image:loc>{{ post.image | absolute_url }}</image:loc> <!-- Test Gain - Again-->
     <image:title><![CDATA[{{ post.title }}]]></image:title>
     <image:caption><![CDATA[{{ post.title }}]]></image:caption>
   </image:image>
