--- a/_includes/single-post-sitemap.html
+++ b/_includes/single-post-sitemap.html
@@ -1,9 +1,9 @@
 <url>
-  <loc>{{ post.url | absolute_url }}</loc>
+  <loc>{{ post.url }}</loc>
   <lastmod>{{ post.date | date_to_xmlschema }}</lastmod>
   {% if page.priority %}<priority>{{page.priority}}</priority>{%endif%}
   <image:image>
-    <image:loc>{{ post.image | absolute_url }}</image:loc> <!-- Test Gain - Again Again-->
+    <image:loc>{{ post.image }}</image:loc> <!-- Test Gain - Again Again-->
     <image:title><![CDATA[{{ post.title }}]]></image:title>
     <image:caption><![CDATA[{{ post.title }}]]></image:caption>
   </image:image>
