--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,7 +27,7 @@
   <meta name='keywords' content='Lucas Gatsas, Gatsas, Astro + Solar Photographer'>
 
   <link rel="canonical" href="{{ site.url  | replace:'index.html','' | absolute_url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{"/feed.xml" | site.url  }}">
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{"/feed.xml" | site.url  }}"> <!-- Fix Changes Here-->
 
   <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
   <!-- Ionicons -->
