--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,8 +26,8 @@
   <meta name='description' content='{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}'>
   <meta name='keywords' content='Lucas Gatsas, Gatsas, Astro + Solar Photographer'>
 
-  <link rel="canonical" href="{{ page.url  | replace:'index.html','' }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{"/feed.xml"}} {{site.url}}"> <!-- Fix Changes Here V.2-->
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
 
   <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
   <!-- Ionicons -->
