--- a/_includes/single-post-sitemap.html
+++ b/_includes/single-post-sitemap.html
@@ -3,7 +3,7 @@
   <lastmod>{{ post.date | date_to_xmlschema }}</lastmod>
   {% if page.priority %}<priority>{{page.priority}}</priority>{%endif%}
   <image:image>
-    <image:loc>{{ site.url }}{{ post.image }}</image:loc> <!-- Test-->
+    <image:loc>{{ site.url }}{{ post.image }}</image:loc> <!-- Test 1-->
     <image:title>{{ post.title }}</image:title>
     <image:caption>{{ post.title }}</image:caption>
   </image:image>
