--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,6 +6,7 @@ layout: default
     "@context": "https://schema.org",
     "@type": "Person",
     "name": "Lucas Gatsas",
+    "description": "Photographer",
     "url": "https://lucasgatsas.com",
     "image": "{{ site.url }}{{ page.image | default: site.img_url }}",
     "keywords": "Lucas Gatsas, Gatsas, Astro + Solar Photographer, tse262728.com, tse262728",
