--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="follow, index, max-snippet:250, max-video-preview:60, max-image-preview:large"/>
 
   <link rel="alternate" hreflang="x-default" href="{{ site.url }}">
 
