--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
   <link rel="alternate" hreflang="x-default" href="{{ site.url }}">
 
 
-  <meta name="robots" content="index,follow" />
+  <!-- <meta name="robots" content="index,follow" /> --> 
   <meta name="robots" content="all" />
 
   {% if page.image %}
