--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="follow, index, max-snippet:250, max-video-preview:60, max-image-preview:large"/>
 
-  <link rel="alternate" hreflang="x-default" href="{{ site.url }}">
+  <link rel="alternate" hreflang="x-default" href="{{ site.url }}{{ page.url }}">
 
 
   <!-- <meta name="robots" content="index,follow" /> --> 
