--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
     "@type": "BlogPosting",
     "url": "{{ site.url }}{{ page.url }}",
     "name": {{ page.title | jsonify }},
-    headline": "{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}",
+    "headline": "{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}",
     "description": "{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 140 }}{% else %}{{ site.description }}{% endif %}",
     "keywords": "Lucas Gatsas, Gatsas, Astro + Solar Photographer, tse262728.com, tse262728",
     "datePublished": {{ page.date | jsonify }},
