--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,8 +24,7 @@ layout: default
       "name": {{ site.author.name | jsonify }},
       "givenName": {{ site.author.givenName | jsonify }},
       "familyName": {{ site.author.familyName | jsonify }},
-      "url": "{{ site.url }}{{ page.image | default: site.img_url }}",
-      "url": "https://lucasgatsas.com"
+      "url": "{{ site.url }}{{ page.image | default: site.img_url }}"
     },
     "jobTitle": "Astro und Solar Photographer",
     "worksFor": {
