--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,10 @@ layout: default
     "keywords": "Lucas Gatsas, Gatsas, Astro + Solar Photographer, tse262728.com, tse262728",
     "datePublished": {{ page.date | jsonify }},
     "dateModified": {{ page.last_modified_at | default: page.date | jsonify }},
+    "license": "https://lucasgatsas.xyz/about",
+    "acquireLicensePage": "https://lucasgatsas.xyz/about",
+    "creditText": "Lucas Gatsas",
+    "copyrightNotice": "Lucas Gatsas"
     "sameAs": [
       "https://www.instagram.com/lucasgatsas",
       "https://youtube.com/@lucasgatsasastro",
