--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,7 @@ layout: default
     "keywords": "Lucas Gatsas, Gatsas, Astro + Solar Photographer, tse262728.com, tse262728",
     "datePublished": {{ page.date | jsonify }},
     "dateModified": {{ page.last_modified_at | default: page.date | jsonify }},
+    "contentUrl": "{{ site.url }}{{ page.image | default: site.img_url }}",
     "license": "https://lucasgatsas.xyz/about",
     "acquireLicensePage": "https://lucasgatsas.xyz/about",
     "creditText": "Lucas Gatsas",
