--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
     "contentUrl": "{{ site.url }}{{ page.image | default: site.img_url }}",
     "license": "https://lucasgatsas.xyz/about",
     "acquireLicensePage": "https://lucasgatsas.xyz/about",
-    "creditText": "Lucas Gatsas",
+    "creditText": "Lucas Gatsas Media",
     "copyrightNotice": "Lucas Gatsas"
     "sameAs": [
       "https://www.instagram.com/lucasgatsas",
