--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
     "license": "https://lucasgatsas.xyz/about",
     "acquireLicensePage": "https://lucasgatsas.xyz/about",
     "creditText": "Lucas Gatsas Media",
-    "copyrightNotice": "Lucas Gatsas"
+    "copyrightNotice": "Lucas Gatsas",
     "sameAs": [
       "https://www.instagram.com/lucasgatsas",
       "https://youtube.com/@lucasgatsasastro",
