--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,6 @@ layout: default
     "license": "https://lucasgatsas.xyz/about",
     "acquireLicensePage": "https://lucasgatsas.xyz/about",
     "creditText": "Lucas Gatsas Media",
-    "copyrightNotice": "Lucas Gatsas",
     "sameAs": [
       "https://www.instagram.com/lucasgatsas",
       "https://youtube.com/@lucasgatsasastro",
@@ -59,7 +58,8 @@ layout: default
         "@type": "Person",
         "name": "Lucas Gatsas",
         "url": "{{ site.url }}"
-       }
+      },
+      "copyrightNotice": "Lucas Gatsas"
     }
   }
   </script>
